--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,26 @@
 <% include partials/header.ejs %>
 
 <main class ="container">
-    <h1<%= title %></h1>
-    <p> Welcome to 
-        <%= title %>
-    </p>
+    <!--Splash Jumbo-->
+            <div class="container">
+                <div class="jumbotron">
+                <h2 style="text-decoration: underline;">
+                    My Favourite Recent Nobel Winners
+                </h2>
+                <div class="row">
+                        <a href="http://www.nobelprize.org/">
+                            <img src="Assets/nobel.png" alt="Nobel" width="300" height="200" border="0">
+                        </a>
+                        <h2>
+                            Arthur B. McDonald
+                        </h2>
+                        <p>
+                            Arthur Bruce McDonald (born August 29, 1943) is a Canadian astrophysicist. McDonald is the director of the Sudbury Neutrino Observatory Institute and holds the Gordon and Patricia Gray Chair in Particle Astrophysics at Queen's University in Kingston, Ontario. He was awarded the 2015 Nobel Prize in Physics jointly with Japanese physicist Takaaki Kajita.
+                        </p>
+                </div>
+                </div>
+            </div>
+    <!-- People Chart -->
 </main>
 
 <% include partials/footer.ejs %>
