--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,14 @@
-<% include partials/header.ejs %>
+<!--
+//File Name   : comp2068_midterm_tylercadeau\views\index.ejs
+//Author Name : Tyler Cadeau
+//Student Num : 200246900
+//Website	  : https://comp2068midtermtylercadeau.herokuapp.com/
+//Description : This view containes my landing page which also brings in 3 partial pages (header/navbar/footer) and contains a nice picture
+of a nobel prize a short blurb of what a nobel is
+-->
 
+<% include partials/header.ejs %>
+<% include partials/navbar.ejs %>
 <main class ="container">
     <!--Splash Jumbo-->
             <div class="container">
@@ -12,10 +21,10 @@
                             <img src="Assets/nobel.png" alt="Nobel" width="300" height="200" border="0">
                         </a>
                         <h2>
-                            Arthur B. McDonald
+                            Nobel Prize
                         </h2>
                         <p>
-                            Arthur Bruce McDonald (born August 29, 1943) is a Canadian astrophysicist. McDonald is the director of the Sudbury Neutrino Observatory Institute and holds the Gordon and Patricia Gray Chair in Particle Astrophysics at Queen's University in Kingston, Ontario. He was awarded the 2015 Nobel Prize in Physics jointly with Japanese physicist Takaaki Kajita.
+                            The Nobel Prize (Swedish pronunciation: [nʊˈbɛl], Swedish definite form, singular: Nobelpriset; Norwegian: Nobelprisen) is a set of annual international awards bestowed in a number of categories by Swedish and Norwegian committees in recognition of academic, cultural and/or scientific advances.
                         </p>
                 </div>
                 </div>
