--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,10 @@
+<!--
+//File Name   : comp2068_midterm_tylercadeau\views\partials\footer.ejs
+//Author Name : Tyler Cadeau
+//Student Num : 200246900
+//Website	  : https://comp2068midtermtylercadeau.herokuapp.com/
+//Description : This partial contains my footer
+-->
 
     <!--JavaScript-->
     <script src="Scripts/lib/jquery/dist/jquery.min.js"></script>
