--- a/views/people.ejs
+++ b/views/people.ejs
@@ -1,5 +1,14 @@
-<% include partials/header.ejs %>
+<!--
+//File Name   : comp2068_midterm_tylercadeau\views\people.ejs
+//Author Name : Tyler Cadeau
+//Student Num : 200246900
+//Website	  : https://comp2068midtermtylercadeau.herokuapp.com/
+//Description : This view containes my people page which also brings in 3 partial pages (header/navbar/footer) and contains a jumbotron
+with 3 nobel prize winners, a short bio, and a link which is made out of a picture of eacher winner to their bio on wiki
+-->
 
+<% include partials/header.ejs %>
+<% include partials/navbar.ejs %>
 <main class ="container">
     <h1<%= title %></h1>
     
