Implemented Tom's Suggestions

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,4 +12,10 @@
     <script src="Scripts/app.js"></script>
 </body>
 
+<footer>
+    <div class="container fixed-bottom" style="text-align:right">
+        <p class="text-muted"><br><br>Tyler Cadeau 25/02/2016</p>
+      </div>
+</footer>
+
 </html>
