--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,7 +10,7 @@
 <% include partials/navbar.ejs %>
 <!-- Main -->
 <main>
-    <div class="container-fluid">
+    <div class="container">
             <h2>
                 To contact me driectly please enter the form below
             </h2>
