--- a/views/people.ejs
+++ b/views/people.ejs
@@ -14,14 +14,15 @@ with 3 nobel prize winners, a short bio, and a link which is made out of a pictu
     
     <!--People CHart-->
             <div class="container">
-                <div class="jumbotron">
                 <h2 style="text-decoration: underline;">
+                     <!--Title-->
                     Recent Nobel Winners
                 </h2>
                 <div class="row">
-                    <div class="col-md-4">
+                     <!--First Person-->
+                    <div class="card-group col-md-4">
                         <a href="https://en.wikipedia.org/wiki/Arthur_B._McDonald">
-                            <img src="Assets/person1.jpg" alt="" width="300" height="200" border="0">
+                            <img src="Assets/person1.jpg" alt="" width="200" height="200" border="0">
                         </a>
                         <h2>
                             Arthur B. McDonald
@@ -30,9 +31,10 @@ with 3 nobel prize winners, a short bio, and a link which is made out of a pictu
                             Arthur Bruce McDonald (born August 29, 1943) is a Canadian astrophysicist. McDonald is the director of the Sudbury Neutrino Observatory Institute and holds the Gordon and Patricia Gray Chair in Particle Astrophysics at Queen's University in Kingston, Ontario. He was awarded the 2015 Nobel Prize in Physics jointly with Japanese physicist Takaaki Kajita.
                         </p>
                     </div>
-                    <div class="col-md-4">
+                     <!--Second Person-->
+                    <div class="card-group col-md-4">
                         <a href="https://en.wikipedia.org/wiki/Takaaki_Kajita">
-                            <img src="Assets/person2.jpg" alt="" width="300" height="200" border="0">
+                            <img src="Assets/person2.jpg" alt="" width="200" height="200" border="0">
                         </a>
                         <h2>
                             Takaaki Kajita
@@ -41,9 +43,10 @@ with 3 nobel prize winners, a short bio, and a link which is made out of a pictu
                             Takaaki Kajita (born 9 March 1959) is a Japanese physicist, known for neutrino experiments at the Kamiokande and its successor, Super-Kamiokande. In 2015, he was awarded the Nobel Prize in Physics jointly with Canadian physicist Arthur B. McDonald.
                         </p>
                     </div>
-                    <div class="col-md-4">
+                     <!-- Third Person-->
+                    <div class="card-group col-md-4">
                         <a href="https://en.wikipedia.org/wiki/Paul_L._Modrich">
-                            <img src="Assets/person3.jpg" alt="" width="300" height="200" border="0">
+                            <img src="Assets/person3.jpg" alt="" width="200" height="200" border="0">
                         </a>
                         <h2>
                             Paul L. Modrich
@@ -52,7 +55,6 @@ with 3 nobel prize winners, a short bio, and a link which is made out of a pictu
                             Paul Lawrence Modrich (born June 13, 1946) is an American biochemist, James B. Duke Professor of Biochemistry at Duke University and Investigator at the Howard Hughes Medical Institute. He received a Ph.D. degree in 1973 from Stanford University and an B.S. degree in 1968 from MIT. He is known for his research on DNA mismatch repair.
                         </p>
                     </div>
-                </div>
                 </div>
             </div>
     <!-- People Chart -->
